<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFEB3B"
        android:theme="@style/AppTheme.AppBarOverlay">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:textColor="#FF00BF" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF00E5"
            app:tabIndicatorColor="#00BCD4"
            app:tabRippleColor="#00FF0A"
            app:tabTextColor="#FFEB3B">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/musicTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#E91E63"
                android:text="@string/music" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/lightsTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00BCD4"
                android:text="@string/lights" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/systemTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#4CAF50"
                android:text="@string/system" />
        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager__main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#312645"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonPress"
        android:text="@string/button"
        app:layout_anchor="@+id/view_pager__main"
        app:layout_anchorGravity="center" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/devicesListView"
        android:choiceMode="singleChoice"
        android:layout_below="@+id/PairedBtn"
        android:layout_alignEnd="@+id/off" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonPressFour"
        android:text="Button"
        app:layout_anchor="@+id/spinner"
        app:layout_anchorGravity="bottom|center" />

    <FrameLayout
        android:layout_width="251dp"
        android:layout_height="37dp"
        android:background="#E91E63"
        app:layout_anchor="@+id/view_pager__main"
        app:layout_anchorGravity="start|bottom">

    </FrameLayout>

    <Spinner
        android:id="@+id/spinnerBLE"
        android:layout_width="241dp"
        android:layout_height="39dp"
        android:backgroundTint="#000000"
        android:foregroundTint="#000000"
        app:layout_anchor="@+id/view_pager__main"
        app:layout_anchorGravity="start|bottom" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="#FFEB3B"
        app:layout_anchor="@+id/spinner"
        app:layout_anchorGravity="center">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="290dp"
        android:layout_height="240dp"
        android:orientation="horizontal"
        app:layout_anchor="@+id/button2"
        app:layout_anchorGravity="center"></LinearLayout>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonPressFive"
        android:text="Button"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="start|center" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonPressSix"
        android:text="Button"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="end|center" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonPressSeven"
        android:text="Button"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="bottom|center" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:backgroundTint="#000000"
        android:foregroundTint="#FFEB3B"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="top|center" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="223dp"
        android:layout_height="77dp"
        app:layout_anchor="@+id/view_pager__main"
        app:layout_anchorGravity="bottom|center">

    </FrameLayout>

    <TextView
        android:id="@+id/consolText"
        android:layout_width="402dp"
        android:layout_height="wrap_content"
        android:text="Console Output"
        android:textColor="#FFEB3B"
        app:layout_anchor="@+id/frameLayout"
        app:layout_anchorGravity="start|top" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="disconnect"
        android:text="@string/disconnect"
        app:layout_anchor="@+id/frameLayout"
        app:layout_anchorGravity="end|bottom" />

    <EditText
        android:id="@+id/textInput"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#00BCD4"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#03A9F4"
        app:layout_anchor="@+id/button4"
        app:layout_anchorGravity="bottom|center" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        app:layout_anchor="@+id/spinner"
        app:layout_anchorGravity="top|center" />

    <TextView
        android:id="@+id/brightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Brightness"
        android:textColor="#FFFCFC"
        app:layout_anchor="@+id/seekBar"
        app:layout_anchorGravity="bottom|center" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:orientation="vertical"
        app:layout_anchor="@+id/button7"
        app:layout_anchorGravity="center"></LinearLayout>

    <EditText
        android:id="@+id/c0"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="120,20,0"
        android:textAlignment="center"
        android:textColor="#FAF9F9"
        app:layout_anchor="@+id/linearLayout2"
        app:layout_anchorGravity="top|center" />

    <EditText
        android:id="@+id/c1"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="70,70,0"
        android:textAlignment="center"
        android:textColor="#FFFDFD"
        app:layout_anchor="@+id/c0"
        app:layout_anchorGravity="bottom|center" />

    <EditText
        android:id="@+id/c2"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="0,20,120"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_anchor="@+id/c1"
        app:layout_anchorGravity="bottom|center" />

    <EditText
        android:id="@+id/c3"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="0,150,10"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="bottom|center" />

    <TextView
        android:id="@+id/c0t"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:text="Color 0:"
        android:textColor="#FFFFFF"
        app:layout_anchor="@+id/c0"
        app:layout_anchorGravity="start|center" />

    <TextView
        android:id="@+id/c1t"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:text="Color 1:"
        android:textColor="#FFFFFF"
        app:layout_anchor="@+id/c1"
        app:layout_anchorGravity="start|center" />

    <TextView
        android:id="@+id/c2t"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:text="Color 2:"
        android:textColor="#FFFFFF"
        app:layout_anchor="@+id/c2"
        app:layout_anchorGravity="start|center" />

    <TextView
        android:id="@+id/c3t"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:text="Color 3:"
        android:textColor="#FFFFFF"
        app:layout_anchor="@+id/c3"
        app:layout_anchorGravity="start|center" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="vertical"
        app:layout_anchor="@+id/view_pager__main"
        app:layout_anchorGravity="top|center"></LinearLayout>

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        app:layout_anchor="@+id/linearLayout3"
        app:layout_anchorGravity="bottom|center" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="vertical"
        app:layout_anchor="@+id/seekBar2"
        app:layout_anchorGravity="top|center"></LinearLayout>

    <TextView
        android:id="@+id/lightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Light Speed"
        android:textColor="#00BCD4"
        app:layout_anchor="@+id/linearLayout4"
        app:layout_anchorGravity="bottom|center" />

    <TextView
        android:id="@+id/consol2Text"
        android:layout_width="402dp"
        android:layout_height="wrap_content"
        android:text="ESP32 Output"
        android:textColor="#00BCD4"
        app:layout_anchor="@+id/linearLayout2"
        app:layout_anchorGravity="bottom|center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>